[project]
name = "research-report-agent"
version = "0.1.0"
description = "Lab 02 - A multi-step Research & Report agent using Gemini function calling (web_search, fetch_url, analyze_data)"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai",
    "fastapi",
    "uvicorn",
    "httpx",
    "beautifulsoup4",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
